# scimesh

./: .Rbuildignore  .gitignore  CHANGES  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  PROJECT_PLAN.md  PROJECT_PLAN_REVIEW1.md  PROJECT_PLAN_v1.md  PROJECT_PLAN_v2.md  README.md  README_DEVELOPMENT.md
.github/workflows/: R-CMD-check.yaml  tests_R.yml  tests_cpp.yml
.opencode/plans/: grid-crop-compositing.md  implementation-plan.md  medial-view-bugfix.md  plan-v2-updates.md  ssaa-antialiasing.md
R/: RcppExports.R  camera.R  colorbar.R  compose.R  image_export.R  mesh_utils.R  render.R  scimesh-package.R  utils.R  views.R  vis.R
cpp_tests/: CMakeLists.txt  test_brain_mesh.cpp  test_camera.cpp  test_clipping.cpp  test_image.cpp  test_integration.cpp  test_math.cpp  test_mesh.cpp  test_meshes.h  test_normals.cpp  test_primitives.cpp  test_rasterizer.cpp  test_visual_validation.cpp
dev_tools/project_plan/: PROJECT_PLAN.md  PROJECT_PLAN_v2.md
dev_tools/rgl_interoperability/: compare_camera_default_view.R  compare_primitives.R  rgl_large_sphere.R
docs/: CPP_GETTING_STARTED.md
examples/R/: run_all_R.sh
examples/R/colormaps/: run.R
examples/R/dragon/: run.R
examples/R/primitives/: run.R
examples/R/spot_cow/: run.R
examples/R/transparency/: run.R
examples/R/video_frames_orbit/: frames_to_video.sh  run.R
examples/R/vis_subject_morph_native/: run.R
examples/R/whole_brain_sulc/: run.R
examples/R/whole_brain_sulc_single_image/: run.R
examples/cpp/: run_all_cpp.sh
examples/cpp/all_primitives/: CMakeLists.txt  build_manually.sh  main.cpp
examples/cpp/brain_video/: CMakeLists.txt  frames_to_brain_video.sh  main.cpp
examples/cpp/bunny/: CMakeLists.txt  main.cpp
examples/cpp/dragon/: CMakeLists.txt  main.cpp
examples/cpp/protein_data_bank_pdb_file/: CMakeLists.txt  main.cpp  tiny_pdb.hpp
examples/cpp/spot_cow/: CMakeLists.txt  main.cpp
examples/cpp/transparency/: CMakeLists.txt  main.cpp
examples/cpp/whole_brain_annot/: main.cpp
examples/cpp/whole_brain_annot_single_image/: CMakeLists.txt  main.cpp
examples/cpp/whole_brain_sulc/: main.cpp
examples/cpp/whole_brain_sulc_single_image/: CMakeLists.txt  main.cpp
inst/: WORDLIST
inst/doc/: scimesh.R  scimesh.Rmd  scimesh.html
man/: anatomical_views.Rd  as_scimesh_mesh.Rd  camera.Rd  camera_auto.Rd  camera_orbit.Rd  colorbar_horizontal.Rd  colorbar_vertical.Rd  compose_layout.Rd  compute_vertex_normals.Rd  diverging_colormap.Rd  generate_arrow.Rd  generate_axes.Rd  generate_bbox.Rd  generate_cone.Rd  generate_cuboid.Rd  generate_cylinder.Rd  generate_plane.Rd  generate_pyramid.Rd  generate_sphere.Rd  generate_tetrahedron.Rd  generate_torus.Rd  image_apply_contrast.Rd  image_apply_gamma.Rd  image_crop.Rd  image_crop_to_content.Rd  image_grow.Rd  image_merge.Rd  image_rotate_90.Rd  image_scale.Rd  image_to_array.Rd  mesh_bbox.Rd  mesh_from_rgl.Rd  mesh_to_rgl.Rd  read_obj.Rd  read_ply.Rd  read_stl.Rd  render_hemisphere_views.Rd  render_lines.Rd  render_mesh.Rd  render_options.Rd  (+14 more)
src/: Makevars  Makevars.win  RcppExports.cpp  rcpp_bindings.cpp  symbols.rds
src/core/: camera.cpp  camera.h  clipping.cpp  clipping.h  fs_mesh_converter.h  image.cpp  image.h  libfs.h  math_utils.h  mesh.h  normals.cpp  normals.h  obj_io.cpp  obj_io.h  ply_io.cpp  ply_io.h  primitives.cpp  primitives.h  rasterizer.cpp  rasterizer.h  render_options.h  renderer.cpp  renderer.h  scene.h  stl_io.h  to_string.h  transforms.cpp  transforms.h  types.h
tests/: testthat.R
tests/testthat/: test-colorbar.R  test-compose.R  test-image-io.R  test-mesh-utils.R  test-performance.R  test-render.R  test-views.R  test-vis.R  test-wireframe-transparency.R
vignettes/: scimesh.R  scimesh.Rmd  scimesh.html
(+5 files in other folders)
